Fix alignment of toggle label by removing line-height inherited from .editor-styles-wrapper

--- a/packages/components/src/toggle-control/style.scss
+++ b/packages/components/src/toggle-control/style.scss
@@ -1,6 +1,7 @@
 .components-toggle-control .components-base-control__field {
 	display: flex;
 	margin-bottom: $grid-size-small * 3;
+	line-height: initial;
 
 	.components-form-toggle {
 		margin-right: $grid-size-large;
